changed z-index order to avoid help layer to popup over login screen

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -99,7 +99,7 @@ textarea:focus, input:focus{
 	bottom: 10px;
 	left: 10px;
 	right: 10px;
-	z-index: 4;
+	z-index: 8;
 	max-width: 768px;
 	opacity: 0;
 	display: none;
@@ -670,7 +670,7 @@ body.PD0900 #simulation_wrapper h1 {
 	background-repeat: no-repeat;
 	background-position: top;
 	background-size: 100% auto;
-	z-index: 2;
+	z-index: 5;
 	opacity: 0;
 }
 
@@ -720,7 +720,7 @@ body.PD0900 #simulation_wrapper h1 {
 #overlay {
 	position: absolute;
 	top: 0;
-	z-index: 3;
+	z-index: 6;
 	background: #000;
 	display: none;
 	width: 100%;
